# bamfilter

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  environment.yml  main.cpp
include/: CIGAR.cpp  CIGAR.hpp  filtering.cpp  filtering.hpp
